Fix button alignment in lessons

--- a/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
@@ -1819,8 +1819,17 @@ span.nextprev {
 .contentButton span {
   padding: 0px !important;
 }
+
+.contentButton span a {
+  /* NYU: Added to stop the larger icons from overflowing their container and affecting the line height. */
+  overflow: hidden;
+}
+
 .fa-button-text{
   font-size:125%;
+
+  /* NYU: Added to stop the larger icons from overflowing their container and affecting the line height. */
+  float: right;
 }
 .navIntraTool li.contentButton a .fa-button-text, .fa-fw {
   font-family:FontAwesome;
